# myNetlib

./: CMakeLists.txt  README.md
include/: device.h  nps.h
src/: device.c  test.c
